spacing on short devices fixed for contact component

--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -17,7 +17,7 @@
 }
 
 .border {
-  margin: 0 100px;
+  margin: 0 auto;
   padding: 10px;
   box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
   background: rgb(255, 255, 255);
@@ -305,5 +305,11 @@
   }
   .page__wrapper {
     padding: 50px 50px;
+  }
+}
+
+@media only screen and (max-height: 650px) {
+  .title {
+    margin-bottom: 3rem;
   }
 }
